[package]
name = "token_tranfer"
version = "0.1.0"
edition = "2021"

[dependencies]
borsh = "1.5.7"
borsh-derive = "1.5.7"
serde = {version = "1.0.219", features = ["derive"]}
solana-program = "2.1.22"
spl-token = { version = "8.0.0", features = ["no-entrypoint"] }

[dev-dependencies]
solana-program-test = "2.1.22"
solana-sdk = "2.1.22"

[workspace.dependencies]
borsh = "1.5.7"